<resources>
    <string name="app_name">abs-android</string>
    <string name="quickly_seting">快捷方式设置</string>
    <string name="authentication">验证身份</string>
    <string name="changepass">修改密码</string>
    <string name="finish">完成</string>
    <string name="input_auth_code">请输入验证码</string>
    <string name="input_phone_number">请输入手机号码</string>
    <string name="pass_Format_error">密码长度为6-12位，且必须包含英文字母加数字</string>
    <string name="auth_code_wrong">手机或验证码有误，请重新获取</string>
    <string name="change_pass_faild">密码修改失败</string>
    <string name="input_new_pass_tip">6-12位字母和数字组合</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="next">下一步</string>
    <string name="next_finish">下一步,完成</string>
    <string name="urgenttask">条紧急任务已放入您的活动订单</string>
    <string name="generaltask">条普通任务已放入您的订单池</string>
    <string name="neworder">条新订单等待认领</string>
    <string name="nearorder">条新订单处于您的附近</string>
    <string name="scheme_query">方案查询</string>
    <string name="productdescription">产品说明</string>
    <string name="fastbilling">快速开单</string>
    <string name="mymessage">聊天历史</string>
    <string name="initiatechat">发起聊天</string>
    <string name="handyhaversack">快速开单</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings-Test</string>
    <string name="prompt_account">Account/Email/Phone</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="forgot_password">forget the password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_account">This account id or email or phone is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">account or password is blank</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="gotosomewhere">leave for</string>
    <string name="saveorder">orderreceive</string>
    <string name="getorder">orderGrab</string>
    <string name="title">string</string>
    <string name="confirm">confirm</string>
    <string name="loading">loading</string>
    <string name="xlistview_footer_hint_normal">normal</string>
    <string name="xlistview_header_hint_normal">header_normal</string>
    <string name="xlistview_header_last_time">lasttime</string>
    <string name="input_phone">input phone wrong</string>
    <string name="xlistview_header_hint_ready">ready</string>
    <string name="xlistview_header_hint_loading">loading</string>
    <string name="xlistview_footer_hint_ready">ready</string>
    <string name="no_clientid">no client id</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="unbind_alias">unbind</string>
    <string name="bind_alias">请先绑定手机号!</string>
    <string name="hello">hello</string>
    <string name="pmsg">pmsg</string>
    <string name="psmsg">psmsg</string>
    <string name="clear">clear</string>
    <string name="begin">begin</string>
    <string name="duration">duration</string>
    <string name="empty_message">nothing</string>
    <string name="btn_empty_retry">refresh</string>
    <string name="loading_text">loading</string>
    <string name="btn_error_retry">retry</string>
    <string name="text_ack_msg">Read</string>
    <string name="text_delivered_msg">Delivered</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="button_pushtotalk">Hold to talk</string>
    <string name="button_send">Send</string>
    <string name="attach_smile">Emoticon</string>
    <string name="attach_picture">Image</string>
    <string name="attach_take_pic">Capture</string>
    <string name="attach_location">Location</string>
    <string name="attach_video">Video</string>
    <string name="attach_file">File</string>
    <string name="attach_voice_call">Voice call</string>
    <string name="attach_video_call">Video call</string>
    <string name="user_card">Business card</string>
    <string name="move_up_to_cancel">Finger up to cancel sending</string>
    <string name="release_to_cancel">Finger release to cancel sending</string>
    <string name="send_fail">Send failed</string>
    <string name="delete_message">Delete message</string>
    <string name="delete_conversation_messages">Delete conversation and messages</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="copy_message">Copy message</string>
    <string name="delete_voice">Delete voice</string>
    <string name="delete_video">Delete video</string>
    <string name="delete">Delete</string>
    <string name="resend">Resend</string>
    <string name="confirm_resend">Confirm to resend？</string>
    <string name="connect_failuer_toast">Please check the network or try again later</string>
    <string name="network_unavailable">The network connection is not available, please check the network</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="button_logout">Logout</string>
    <string name="button_uploadlog">Upload the log</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="prompt">Prompt</string>
    <string name="clear_records">Clear conversation?</string>
    <string name="clear_all_records">Clear all conversations？</string>
    <string name="location_recv">[%1$s location]</string>
    <string name="location_message">The location information</string>
    <string name="recording_video">Record video</string>
    <string name="location_prefix">[my location]</string>
    <string name="voice">Voice</string>
    <string name="picture">[Picture]</string>
    <string name="video">[Video]</string>
    <string name="file">[file]</string>
    <string name="voice_call">[Voice call]</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_search">Find</string>
    <string name="button_add">Add</string>
    <string name="search_header">Search</string>
    <string name="network_isnot_available">The network is not available</string>
    <string name="recoding_fail">The recording failure, please try again！</string>
    <string name="select_contacts">Select the contact</string>
    <string name="confirm_forward_to">Confirm to forward to：%1$s ?</string>
    <string name="logout">Logout</string>
    <string name="logout_hint">Logout will never clear the chat history, this account can be used on next login</string>
    <string name="exit_group_hint">The group messages will not be received after exiting the group</string>
    <string name="dissolution_group_hint">The group will be dismissed after exiting</string>
    <string name="exit_group">Exit</string>
    <string name="connect_conflict">The same account was loggedin in other device</string>
    <string name="em_user_remove">This user has been removed</string>
    <string name="set">Settings</string>
    <string name="notify">New message notification</string>
    <string name="newnotify">Receiving a new message</string>
    <string name="shake">Shake</string>
    <string name="chatset">Chat settings</string>
    <string name="yangshengqi">Use speaker</string>
    <string name="book_black">Black list</string>
    <string name="session">Conversation</string>
    <string name="address_book">Address book</string>
    <string name="setting">Settings</string>
    <string name="now_refresh_list">Refreshing contact list</string>
    <string name="Application_and_notify">Invitation and notification</string>
    <string name="save_new_nickname">Save new nickname</string>
    <string name="group_chat">Group chat</string>
    <string name="add_friend">Add friends</string>
    <string name="search">Search</string>
    <string name="black_item">Black list</string>
    <string name="diagnose">Diagnose</string>
    <string name="push_nick">IOS offline push nick</string>
    <string name="user_nickname">昵称：%1$s</string>
    <string name="Current_version">Current version</string>
    <string name="Not_Set">Not set</string>
    <string name="Upload_the_log">Uploading the log</string>
    <string name="The_new_group_chat">Create new group</string>
    <string name="group_name">Group name</string>
    <string name="Group_chat_profile">Group profile</string>
    <string name="Whether_the_public">Is public</string>
    <string name="Open_group_members_invited">Allow members to invite</string>
    <string name="Open_group_chat">Public group</string>
    <string name="blacklist">Black list</string>
    <string name="Empty_the_chat_record">Clear conversation</string>
    <string name="Shielding_of_the_message">Block message</string>
    <string name="Select_the_contact">Select the contact</string>
    <string name="Group_chat_information">The group description</string>
    <string name="Group_of_Lord">The group owner</string>
    <string name="Introduction">Brief</string>
    <string name="To_join_the_chat">Join the group</string>
    <string name="login">Login</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="downwaiting">Downloading the file, please try again later</string>
    <string name="mute">Mute</string>
    <string name="Hands_free">Hands free</string>
    <string name="hang_up">Hang up</string>
    <string name="answer">Answer</string>
    <string name="unable_to_connect">Unable to connect to the server</string>
    <string name="newchat">Create new group</string>
    <string name="agree">Agree</string>
    <string name="Group_chat">Group chat</string>
    <string name="chat_room">Chat room</string>
    <string name="not_download">Did not download:</string>
    <string name="is_down_please_wait">Downloading video, please try again later</string>
    <string name="Exit_the_group_chat">Exit the group</string>
    <string name="Please_enter_a_username">Please enter a username</string>
    <string name="not_add_myself">"Can't add myself"</string>
    <string name="This_user_is_already_your_friend">This user is already your friend</string>
    <string name="Add_a_friend">Let me to be your friend!</string>
    <string name="send_successful">Request was sent, waiting for the peer to accept</string>
    <string name="Request_add_buddy_failure">Request add buddy failure:</string>
    <string name="Network_error">Network error</string>
    <string name="Making_sure_your_location">Making sure your location..</string>
    <string name="please_check">key validation error!Please on AndroidManifest.xml file check the key set</string>
    <string name="expression">[expression]</string>
    <string name="Removed_from_the_failure">Removed fail</string>
    <string name="be_removing">Be removing</string>
    <string name="froget_pass_word_auth_code">验证码</string>
    <string name="new_pass_word">新密码</string>
    <string name="confirm_pass_word">确认密码</string>
    <string name="next_confirm">确定</string>
    <string name="hint_old_password">请输入您的旧密码</string>
    <string name="old_password">旧密码</string>
    <string name="hint_new_password">密码由6~12位英文字母、数字组成</string>
    <string name="new_password">新密码</string>
    <string name="hint_confirm_password">请再次输入新密码</string>
    <string name="confirm_password">确认新密码</string>
    <string name="can_not_input_chinese">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ\'~!@#$%^*()_+`-={}[]|:;,./\&lt;\&gt;\&amp;\&apos;\&quot;</string>
    <string name="action_sign_up">Sign up</string>
</resources>