<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dp">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#c8c7cc" />
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <LinearLayout
                style="@style/itemSettingStyle"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/setting_shortcut_key_layout_height"
                android:orientation="horizontal">

                <TextView
                    style="@style/titleSettingStyle"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_search_bar"
                    android:textSize="@dimen/open_order_text_size"
                    android:text="@string/old_password" />
                <EditText
                    android:focusableInTouchMode="true"
                    android:focusable="true"
                    android:background="@null"
                    android:id="@+id/tv_appmodify_old"
                    android:paddingLeft="@dimen/nav_view_drawer_image_text_margin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword|textMultiLine"
                    android:password="true"
                    android:digits="@string/can_not_input_chinese"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/open_order_text_size"
                    android:hint="@string/hint_old_password"/>

            </LinearLayout>
        </FrameLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#c8c7cc" />
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <LinearLayout
                style="@style/itemSettingStyle"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/setting_shortcut_key_layout_height"
                android:orientation="horizontal">

                <TextView
                    style="@style/titleSettingStyle"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_search_bar"
                    android:textSize="@dimen/open_order_text_size"
                    android:text="@string/new_password" />
                <EditText
                    android:focusableInTouchMode="true"
                    android:focusable="true"
                    android:background="@null"
                    android:digits="@string/can_not_input_chinese"
                    android:id="@+id/tv_appmodify_new"
                    android:paddingLeft="@dimen/nav_view_drawer_image_text_margin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionUnspecified"
                    android:password="true"
                    android:inputType="textPassword|textMultiLine"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/open_order_text_size"
                    android:hint="@string/hint_new_password"/>

            </LinearLayout>
        </FrameLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#c8c7cc" />
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <LinearLayout
                style="@style/itemSettingStyle"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/setting_shortcut_key_layout_height"
                android:orientation="horizontal">

                <TextView
                    style="@style/titleSettingStyle"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_search_bar"
                    android:textSize="@dimen/open_order_text_size"
                    android:text="@string/confirm_password" />
                <EditText
                    android:focusableInTouchMode="true"
                    android:focusable="true"
                    android:background="@null"
                    android:digits="@string/can_not_input_chinese"
                    android:id="@+id/tv_appmodify_confirm"
                    android:paddingLeft="@dimen/nav_view_drawer_image_text_margin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword|textMultiLine"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/open_order_text_size"
                    android:hint="@string/hint_confirm_password"/>

            </LinearLayout>
        </FrameLayout>
        <Button
            android:layout_marginTop="@dimen/nav_view_drawer_image_text_margin"
            android:id="@+id/btn_appmodify_confirm"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="@drawable/btn_blue_selector"
            android:gravity="center"
            android:text="@string/next_confirm"
            android:textColor="@color/login_text_color"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
